libnd4j/include/legacy/NativeOps.h

typedef sd::InteropDataBuffer  OpaqueDataBuffer;
typedef sd::TadPack OpaqueTadPack;
SD_LIB_EXPORT OpaqueTadPack *tadOnlyShapeInfo(OpaqueDataBuffer *hXShapeInfo, sd::LongType *dimension, sd::LongType dimensionLength);
SD_LIB_EXPORT const char *getDeviceName(int device);
SD_LIB_EXPORT void checkP2P() ;
SD_LIB_EXPORT void enableP2P(bool enable) ;
SD_LIB_EXPORT bool isP2PAvailable() ;
SD_LIB_EXPORT void initializeDevicesAndFunctions() ;
SD_LIB_EXPORT sd::Pointer mallocHost(sd::LongType memorySize, int flags) ;
SD_LIB_EXPORT sd::Pointer mallocDevice(sd::LongType memorySize, int deviceId, int flags) ;
SD_LIB_EXPORT int freeHost(sd::Pointer pointer) ;
SD_LIB_EXPORT int freeDevice(sd::Pointer pointer, int deviceId) ;
SD_LIB_EXPORT sd::Pointer createContext() ;
SD_LIB_EXPORT sd::Pointer createStream() ;
SD_LIB_EXPORT sd::Pointer createEvent() ;
SD_LIB_EXPORT int registerEvent(sd::Pointer event, sd::Pointer stream) ;
SD_LIB_EXPORT int setDevice(int deviceId) ;
SD_LIB_EXPORT sd::LongType getDeviceFreeMemory(int device) ;
SD_LIB_EXPORT sd::LongType getDeviceTotalMemory(int device) ;
SD_LIB_EXPORT int memcpyAsync(sd::Pointer dst, sd::Pointer src, sd::LongType size, int flags, sd::Pointer reserved) ;
SD_LIB_EXPORT int memsetAsync(sd::Pointer dst, int value, sd::LongType size, int flags, sd::Pointer reserved) ;
SD_LIB_EXPORT int destroyEvent(sd::Pointer event) ;
SD_LIB_EXPORT int streamSynchronize(sd::Pointer stream) ;
SD_LIB_EXPORT int eventSynchronize(sd::Pointer event) ;
SD_LIB_EXPORT int getAvailableDevices() ;
SD_LIB_EXPORT void enableDebugMode(bool reallyEnable) ;
SD_LIB_EXPORT void setGridLimit(int gridSize) ;
SD_LIB_EXPORT int ompGetMaxThreads() ;
SD_LIB_EXPORT int ompGetNumThreads() ;
SD_LIB_EXPORT void setOmpNumThreads(int threads) ;
/**
 * Enable or disable verbose native diagnostics.
 * @param reallyEnable true to enable verbose output, false to disable it
 */
SD_LIB_EXPORT void enableVerboseMode(bool reallyEnable) ;
SD_LIB_EXPORT int getDeviceMajor(int device) ;
SD_LIB_EXPORT int getDeviceMinor(int device) ;
SD_LIB_EXPORT int memcpyConstantAsync(sd::LongType dst, sd::Pointer src, sd::LongType size, int flags, sd::Pointer reserved) ;
SD_LIB_EXPORT sd::Pointer getConstantSpace() ;
SD_LIB_EXPORT bool isExperimentalEnabled() ;
SD_LIB_EXPORT void setOmpMinThreads(int threads) ;
SD_LIB_EXPORT int getDevice() ;
SD_LIB_EXPORT void convertTypes(sd::Pointer *extras, int srcType, sd::Pointer dX, sd::LongType N, int dstType, sd::Pointer dZ) ;