nd4j-backends/nd4j-api-parent/nd4j-native-api/src/main/java/org/nd4j/nativeblas/NativeOps.java


    public native void   execTransformHalf(PointerPointer extraPointers,
                                            int opNum,
                                            @Cast("float16*") ShortPointer dx,
                                            IntPointer xShapeInfo,
                                            @Cast("float16*") ShortPointer results,
                                            IntPointer resultShapeInfo,
                                            @Cast("float16*") ShortPointer extraParams,
                                            IntPointer xIndexes,
                                            IntPointer resultIndexes);


    /**
     * Append an input array
     * to the end of a flat array
     * in a particular order
     * @param offset the offset of the array to start at
     * @param order the order
     * @param result the result array
     * @param resultShapeInfo the shape info for te array
     * @param input the input for the array
     * @param inputShapeInfo the shape information for that array
     */
    public native void flattenFloat(
            PointerPointer extraPointers,
            int offset,
            char order,
            FloatPointer results,
            IntPointer resultShapeInfo,
            FloatPointer input,
            IntPointer inputShapeInfo);

    public native void flattenHalf(
            PointerPointer extraPointers,
            int offset,
            char order,
            @Cast("float16*") ShortPointer results,
            IntPointer resultShapeInfo,
            @Cast("float16*") ShortPointer input,
            IntPointer inputShapeInfo);


    /**
     * Append an input array
     * to the end of a flat array
     * in a particular order
     * @param offset the offset of the array to start at
     * @param order the order
     * @param result the result array
     * @param resultShapeInfo the shape info for te array
     * @param input the input for the array
     * @param inputShapeInfo the shape information for that array
     */
    public native void flattenDouble(PointerPointer extraPointers,
                                     int offset,
                                     char order,
                                     DoublePointer results,
                                     IntPointer resultShapeInfo,
                                     DoublePointer input,
                                     IntPointer inputShapeInfo);

    /**
     *
     * @param dimension
     * @param data
     * @param inputShapeInfo
     * @param result
     * @param resultShapeInfo
     */
    public native void concatDouble(
            PointerPointer extraPointers,
            int dimension,
            int numArrays,
            PointerPointer data,
            PointerPointer inputShapeInfo,
            DoublePointer results,
            IntPointer resultShapeInfo,
            PointerPointer tadPointers,
            PointerPointer tadOffsets);

    /**
     *
     * @param dimension
     * @param data
     * @param inputShapeInfo
     * @param result
     * @param resultShapeInfo
     */
    public native void concatFloat(
            PointerPointer extraPointers,
            int dimension,
            int numArrays,
            PointerPointer data,
            PointerPointer inputShapeInfo,
            FloatPointer results,
            IntPointer resultShapeInfo,
            PointerPointer tadPointers,
            PointerPointer tadOffsets);

    public native void concatHalf(
            PointerPointer extraPointers,
            int dimension,
            int numArrays,
            PointerPointer data,
            PointerPointer inputShapeInfo,
            @Cast("float16*") ShortPointer results,
            IntPointer resultShapeInfo,
            PointerPointer tadPointers,
            PointerPointer tadOffsets);

    /**
     * Gets the maximum number of open mp threads
     * @return
     */
    public native int ompGetMaxThreads();

    /**
     * Gets the number of open mp threads
     * @return
     */
    public native int ompGetNumThreads();

    /**
     * Sets the number of openmp threads
     * @param threads
     */
    public native void setOmpNumThreads(int threads);

    /**
     * Sets the minimal number of openmp threads for variative methods
     * @param threads
     */
    public native void setOmpMinThreads(int threads);

    /**
     * NEVER EVER USE THIS METHOD OUTSIDE OF  CUDA
     */
    public native void initializeDevicesAndFunctions();

    public synchronized native Pointer mallocHost(long memorySize, int flags);

    public synchronized native Pointer mallocDevice(long memorySize, Pointer ptrToDeviceId, int flags);

    public native int freeHost(Pointer pointer);

    public native int freeDevice(Pointer pointer, Pointer deviceId);

    public native Pointer createContext();

    public native Pointer createStream();

    public native Pointer createEvent();

    public native Pointer createBlasHandle();

    public native int registerEvent(Pointer event, Pointer stream);

    public native int destroyEvent(Pointer event);

    public native int setBlasStream(Pointer handle, Pointer stream);

    public native int setDevice(Pointer ptrToDeviceId);

    public native int getDevice();

    public native int streamSynchronize(Pointer stream);

    public native int eventSynchronize(Pointer event);

    public native long getDeviceFreeMemory(Pointer ptrToDeviceId);

    public native long getDeviceTotalMemory(Pointer ptrToDeviceId);

    public native int getDeviceMajor(Pointer ptrToDeviceId);

    public native int getDeviceMinor(Pointer ptrToDeviceId);

    public native String getDeviceName(Pointer ptrToDeviceId);

    public native int memcpy(Pointer dst, Pointer src, long size, int flags, Pointer reserved);

    public native int memcpyAsync(Pointer dst, Pointer src, long size, int flags, Pointer reserved);

    public native int memcpyConstantAsync(long dst, Pointer src, long size, int flags, Pointer reserved);

    public native int memset(Pointer dst, int value, long size,  int flags, Pointer reserved);

    public native int memsetAsync(Pointer dst, int value, long size, int flags, Pointer reserved);

    public native Pointer getConstantSpace();

    public native int getAvailableDevices();

    public native void enableDebugMode(boolean reallyEnable);

    public native void enableVerboseMode(boolean reallyEnable);

    public native void setGridLimit(int gridSize);

    public native void tadOnlyShapeInfo(IntPointer shapeInfo, IntPointer dimension, int dimensionLength, IntPointer targetBuffer, IntPointer offsetsBuffer);

    ///////////////

    public native void pullRowsFloat(PointerPointer extraPointers, FloatPointer x, IntPointer xShapeInfo, FloatPointer z, IntPointer zShapeInfo, int n, IntPointer indexes, IntPointer tadShapeInfo, IntPointer tadOffsets);

    public native void pullRowsDouble(PointerPointer extraPointers, DoublePointer x, IntPointer xShapeInfo, DoublePointer z, IntPointer zShapeInfo, int n, IntPointer indexes, IntPointer tadShapeInfo, IntPointer tadOffsets);

    public native void pullRowsHalf(PointerPointer extraPointers, @Cast("float16*") ShortPointer x, IntPointer xShapeInfo, @Cast("float16*") ShortPointer z, IntPointer zShapeInfo, int n, IntPointer indexes, IntPointer tadShapeInfo, IntPointer tadOffsets);


    ///////////////////////

    public native void averageHalf(PointerPointer extraPointers, PointerPointer x, @Cast("float16*") ShortPointer z, int n, long length, boolean propagate);

    public native void averageFloat(PointerPointer extraPointers, PointerPointer x, FloatPointer z, int n, long length, boolean propagate);

    public native void averageDouble(PointerPointer extraPointers, PointerPointer x, DoublePointer z, int n, long length, boolean propagate);

    ///////////////////////

    public native void enableP2P(boolean reallyEnable);

    public native void checkP2P();

    public native boolean isP2PAvailable();

    //

    public native void shuffleDouble(PointerPointer extraPointers, PointerPointer x, PointerPointer xShapeInfo, PointerPointer z, PointerPointer zShapeInfo, int N, IntPointer shuffleMap, PointerPointer tadShapeInfo, PointerPointer tadOffsets);

    public native void shuffleFloat(PointerPointer extraPointers, PointerPointer x, PointerPointer xShapeInfo, PointerPointer z, PointerPointer zShapeInfo, int N, IntPointer shuffleMap, PointerPointer tadShapeInfo, PointerPointer tadOffsets);

    public native void shuffleHalf(PointerPointer extraPointers, PointerPointer x, PointerPointer xShapeInfo, PointerPointer z, PointerPointer zShapeInfo, int N, IntPointer shuffleMap, PointerPointer tadShapeInfo, PointerPointer tadOffsets);

    // type conversion

    public native void convertTypes(PointerPointer extras, int srcType, Pointer x, long N, int dstType, Pointer z);

    public native boolean isExperimentalEnabled();

    // GridOps



    // MetaOps
    public native void execMetaPredicateStridedFloat(PointerPointer extras, int opTypeA, int opNumA, int opTypeB, int opNumB,
                                                         long N,
                                                         FloatPointer dx,
                                                         int xStride,
                                                         FloatPointer dy,
                                                         int yStride,
                                                         FloatPointer dz,
                                                         int zStride,
                                                         FloatPointer extraA,
                                                         FloatPointer extraB,
                                                         float scalarA,
                                                         float scalarB);

    public native void execMetaPredicateStridedDouble(PointerPointer extras, int opTypeA, int opNumA, int opTypeB, int opNumB,
                                                     long N,
                                                     DoublePointer dx,
                                                     int xStride,
                                                     DoublePointer dy,
                                                     int yStride,
                                                     DoublePointer dz,
                                                     int zStride,
                                                     DoublePointer extraA,
                                                     DoublePointer extraB,
                                                     double scalarA,
                                                     double scalarB);

    public native void execMetaPredicateStridedHalf(PointerPointer extras, int opTypeA, int opNumA, int opTypeB, int opNumB,
                                                     long N,
                                                     @Cast("float16*") ShortPointer dx,
                                                     int xStride,
                                                     @Cast("float16*") ShortPointer dy,
                                                     int yStride,
                                                     @Cast("float16*") ShortPointer dz,
                                                     int zStride,
                                                     @Cast("float16*") ShortPointer extraA,
                                                     @Cast("float16*") ShortPointer extraB,
                                                     float scalarA,
                                                     float scalarB);
